# data-engineering-mfti-final

./: README.md  docker-compose.yml  pyproject.toml
dags/: dags_additional.py  dags_main.py
